🦶️ Fix footer overlap

--- a/react-app/src/pages/dashboard/dashboard.css
+++ b/react-app/src/pages/dashboard/dashboard.css
@@ -1,9 +1,5 @@
 .dashboard {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 80vh;
   width: 100vw;
 }
 
